--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>To Do</title>
   <script src="./js/bundle.js"></script>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <div id="app">
     <ul>
-      <li v-for="item in items">
+      <li v-for="(item, index) in items" :class="item.status? 'completed':'notCompleted'">
         <span>{{item.name}}</span>
+        <span v-if="item.priority === 'high'">High</span>
+        <span v-if="item.priority === 'low'">Low</span>
+        <button v-if="!item.status" @click="taskCompleted(index)">Complete</button>
       </li>
     </ul>
 
     <input type="text" v-model="newToDo" />
+    <input type="radio" name="status" value="high" v-model="newPriority" /> High
+    <input type="radio" name="status" value="low" v-model="newPriority" /> Low
     <button @click="saveNewItem">Save Task</button>
   </div>
 </body>
